Front-End Desing :art:

--- a/Views/Cita/Index.cshtml
+++ b/Views/Cita/Index.cshtml
@@ -16,7 +16,7 @@
 <p>
     <a class="btn btn-primary" asp-action="Create">Create New</a>
 </p>
-<table class="table table-sm  table-bordered table-responsive">
+<table class="table table-sm  table-bordered ">
     <thead class="thead-dark">
         <tr>
             <th>
