--- a/Views/consulta/Index.cshtml
+++ b/Views/consulta/Index.cshtml
@@ -15,7 +15,7 @@
 <p>
     <a class="btn btn-primary" asp-action="Create">Create New</a>
 </p>
-<table class="table table-bordered table-sm table-responsive">
+<table class="table table-bordered table-sm">
     <thead class="thead-dark">
         <tr>
             <th>
