--- a/wwwroot/css/fix.css
+++ b/wwwroot/css/fix.css
@@ -1,6 +1,6 @@
 .citas{
     background: rgba(2,12,52,0.2);
-    padding-top: 25px;
+    margin-top: 25px;
     color:white;
     text-align: center;
 }
