--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,10 +1,6 @@
-﻿.btn-consulta{
-  width: 250px;
-}
-
-#cobro{
+﻿#cobro{
   padding:5%;
-  background: rgba(0, 0, 0, .2);
+  background: rgba(0, 0, 0, .3);
 }
 
 #encabezado{
