Json drop :fix:

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -18,33 +18,33 @@
           <table class="table table-responsive table-hover table-striped">
             <thead class="thead-light memes">
               <tr>
-                <th scope="">Fecha</th>
+                <th scope="">Paciente</th>
                 <th scope="">Hora</th>
               </tr>
             </thead>
             <tbody class="memes">
               <tr>
-                <td >12/21/2019</th>
+                <td >Juan Gomez</th>
                 <td>12:25 PM</td>
               </tr>
               <tr>
-                <td >12/21/2019</th>
+                <td >Juan Gomez</th>
                 <td>12:25 PM</td>
               </tr>
               <tr>
-                <td >12/21/2019</th>
+                <td >Juan Gomez</th>
                 <td>1:25 PM</td>
               </tr>
               <tr>
-                <td >12/21/2019</th>
+                <td >Juan Gomez</th>
                 <td>1:25 PM</td>
               </tr>
               <tr>
-                <td >12/21/2019</th>
+                <td >Juan Gomez</th>
                 <td>1:25 PM</td>
               </tr>
               <tr>
-                <td >12/21/2019</th>
+                <td >Juan Gomez</th>
                 <td>1:25 PM</td>
               </tr>
             </tbody>
