--- a/Views/Diagnostico/Create.cshtml
+++ b/Views/Diagnostico/Create.cshtml
@@ -20,17 +20,30 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <!--
             <div class="form-group">
                 <label asp-for="IdCie" class="control-label"></label>
                 <input asp-for="IdCie" class="form-control" />
                 <span asp-validation-for="IdCie" class="text-danger"></span>
             </div>
+            -->
+            <div class="form-group">
+                <label asp-for="IdCie" class="control-label">Diagnostico - CIE-10</label>
+                <!--
+                <input asp-for="Genero" class="form-control" />
+                <span asp-validation-for="Genero" class="text-danger"></span>
+                -->
+                <select id="cie" asp-for="IdCie" class="form-control">
+
+                </select>
+            </div> 
+
             <div class="form-group">
                 <label asp-for="IdConsulta" class="control-label"></label>
                 <select asp-for="IdConsulta" class ="form-control" asp-items="ViewBag.IdConsulta"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
