--- a/Views/Receta/Create.cshtml
+++ b/Views/Receta/Create.cshtml
@@ -23,6 +23,14 @@
                 <label asp-for="IdConsulta" class="control-label"></label>
                 <select asp-for="IdConsulta" class ="form-control" asp-items="ViewBag.IdConsulta"></select>
             </div>
+
+            <div class="form-grup">
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+                    Detalle Receta
+                </button>
+            </div>
+            <hr style="widht:100%">
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -31,8 +39,48 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
 </div>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Descripción</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form action="#">
+                <div class="form-group">
+                    <label class="control-label">Medicamento</label>
+                    <input type="text"  class="form-control">
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label">Cantidad</label>
+                    <input type="number" class="form-control">
+                </div>
+                
+                <div class="form-group">
+                    <label class="control-label">Dosis</label>
+                    <input type="text" class="form-control">
+                </div>
+
+                <div class="form-group">
+                    <input type="submit" class="btn btn-danger" value="Agregar">
+                </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+            </div>
+        </div>
+        </div>
 
 </body>
 </html>
