--- a/Views/consulta/Index.cshtml
+++ b/Views/consulta/Index.cshtml
@@ -21,6 +21,7 @@
     <a class="btn btn-dark" asp-controller="OrdenLab" asp-action="Create">Orden de laboratorio</a>
     <a class="btn btn-dark" asp-controller="Diagnostico" asp-action="Create">Diagnostico</a>
     <a class="btn btn-dark" asp-controller="Receta" asp-action="Create">Receta</a>
+    <a class="btn btn-dark" asp-controller="Signos" asp-action="Create">Signos Vitales</a>
 </p>
 
 <table class="table table-bordered table-sm">
