--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Factura" asp-action="index">Caja</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="index">Mantenimientos</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Mantenimiento" asp-action="index">Mantenimientos</a>
                         </li>
                         <!--
                         <li class="nav-item">
