--- a/Views/Factura/Index.cshtml
+++ b/Views/Factura/Index.cshtml
@@ -13,7 +13,7 @@
 </head>
 <body>
 <p>
-    <a asp-action="Create" class="btn btn-primary">Create New</a>
+    <a asp-action="Create" class="btn btn-primary">Facturar Expediente</a>
 </p>
 <table class="table">
     <thead>
