--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 
 <div class="text-center">
     <div id="title">
-    <h1 class="display-4">Citas Pendientes</h1>
+    <h1 class="display-4">Citas del Mes</h1>
     </div>
 </div>
 
