--- a/Views/Diagnostico/Create.cshtml
+++ b/Views/Diagnostico/Create.cshtml
@@ -53,5 +53,11 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
+    <script>
+        window.onload = function(){
+            obtenerCie();
+        }
+    </script>
+
 </body>
 </html>
