--- a/Views/Receta/Create.cshtml
+++ b/Views/Receta/Create.cshtml
@@ -20,12 +20,12 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="IdConsulta" class="control-label"></label>
+                <label asp-for="IdConsulta" class="control-label">Cosulta - Paciente</label>
                 <select asp-for="IdConsulta" class ="form-control" asp-items="ViewBag.IdConsulta"></select>
             </div>
 
             <div class="form-grup">
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+                <button type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModalCenter">
                     Detalle Receta
                 </button>
             </div>
