style validation :art:

--- a/Views/Factura/Index.cshtml
+++ b/Views/Factura/Index.cshtml
@@ -12,6 +12,7 @@
     <title>Index</title>
 </head>
 <body>
+<h1>Factura</h1>
 <p>
     <a asp-action="Create" class="btn btn-primary">Facturar Expediente</a>
 </p>
