--- a/Views/Mantenimiento/index.cshtml
+++ b/Views/Mantenimiento/index.cshtml
@@ -3,7 +3,18 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Mantenimientos</h2>
+<style>
+    a:visted{
+        style:none;
+        color:white;
+    }
+    a:link{
+        style:none;
+        color:white;
+    }
+</style>
+
+<h1>Mantenimientos</h2>
 
 <div class="row">
     <div class="col">
