--- a/Views/consulta/Index.cshtml
+++ b/Views/consulta/Index.cshtml
@@ -12,6 +12,7 @@
     <title>Index</title>
 </head>
 <body>
+<h1>Consultas Médicas</h1>
 <p>
     <a class="btn btn-primary" asp-action="Create">Crear Nueva</a>
 </p>
