--- a/Views/Cita/Index.cshtml
+++ b/Views/Cita/Index.cshtml
@@ -13,8 +13,9 @@
     <title>Index</title>
 </head>
 <body>
+<h1>Citas Médica</h1>
 <p>
-    <a class="btn btn-primary" asp-action="Create">Create New</a>
+    <a class="btn btn-primary" asp-action="Create">Crear Nueva</a>
 </p>
 <table class="table table-sm  table-bordered ">
     <thead class="thead-dark">
