--- a/Views/Paciente/Index.cshtml
+++ b/Views/Paciente/Index.cshtml
@@ -12,8 +12,9 @@
     <title>Index</title>
 </head>
 <body>
+<h1>Paciente</h1>
 <p>
-    <a class="btn btn-primary" asp-action="Create">Create New</a>
+    <a class="btn btn-primary" asp-action="Create">Crear Nuevo</a>
 </p>
 <table class="table table-bordered table-sm">
     <thead class="thead-dark">
