--- a/wwwroot/css/fix.css
+++ b/wwwroot/css/fix.css
@@ -47,7 +47,7 @@ span.event-ghost { background-color:transparent; }
 #title{
     border-bottom: 3px solid #1e1e1e;
     border-top: 3px solid #1e1e1e;
-    background-color: rgba(0,250, 250, 0.1);
+    background-color: rgba(255,255,255, 0.8);
     padding: 15px;
     width: 100%;
     margin-bottom: 25px;
