--- a/Views/AdminLogin/Login.cshtml
+++ b/Views/AdminLogin/Login.cshtml
@@ -111,17 +111,17 @@ body {
     <body>
         <div class="login-page">
           <div class="form">
-            <form class="register-form">
+            <form aspcontroller="AdminLogin" asp-action="Logiar"  class="register-form">
               <input type="text" placeholder="name"/>
               <input type="password" placeholder="password"/>
               <input type="text" placeholder="email address"/>
               <button>create</button>
               <p class="message">Already registered? <a href="#">Sign In</a></p>
             </form>
-            <form class="login-form">
-              <input type="text" placeholder="username"/>
-              <input type="password" placeholder="password"/>
-              <button><a asp-controller="Home" asp-action="index" >login </a></button>
+            <form  aspcontroller="AdminLogin" asp-action="Logiar" class="login-form">
+              <input type="email" name="correo" placeholder="username"/>
+              <input type="password" name="pass" placeholder="password"/>
+              <input type="submit" value="Ingresar">
             <!--     <p class="message">Not registered? <a href="#">Create an account</a></p> -->
             </form>
           </div>
