day 0 fix :rotating_light:

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -54,9 +54,9 @@
                         -->
                     </ul>
                 </div>
-                <a class="d-none d-sm-block" href="#">
-                    <i>Cerrar Session</i>   
-                </a>
+                    <i>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="AdminLogin" asp-action="Logout">Cerrar Session</a>
+                    </i>
             </div>
         </nav>
     </header>
