--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,6 +5,8 @@
 <link href="~/css/fix.css" rel="stylesheet">
 <link href='https://fonts.googleapis.com/css?family=Ubuntu:400,500,700' rel='stylesheet' type='text/css'>
 
+<h1>Welcome @ViewData["username"]!</h1>
+
 <div class="text-center">
     <div id="title">
     <h1 class="display-4">Citas del Mes</h1>
