session bug fix :white_check_mark:

--- a/Views/AdminLogin/Login.cshtml
+++ b/Views/AdminLogin/Login.cshtml
@@ -97,18 +97,19 @@
   color: #EF3B3A;
 }
 body {
-  background: #76b852; /* fallback for old browsers */
-  background: -webkit-linear-gradient(right, #76b852, #8DC26F);
-  background: -moz-linear-gradient(right, #76b852, #8DC26F);
-  background: -o-linear-gradient(right, #76b852, #8DC26F);
-  background: linear-gradient(to left, #76b852, #8DC26F);
+  background: #ffffff; /* fallback for old browsers */
+  background: -webkit-linear-gradient(right, #ffffff, #8DC26F);
+  background: -moz-linear-gradient(right, #ffffff, #8DC26F);
+  background: -o-linear-gradient(right, #ffffff, #8DC26F);
+  background: linear-gradient(to left, #ffffff, #8DC26F);
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;      
 }
         </style>
     </head>
-    <body>
+
+     <body>
         <div class="login-page">
           <div class="form">
             <form aspcontroller="AdminLogin" asp-action="Logiar"  class="register-form">
@@ -127,4 +128,5 @@ body {
           </div>
         </div>
     </body>
+
 </html>
