--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -75,7 +75,7 @@ html {
 
 body {
   /* Margin bottom by footer height */
-  background: #76b852;
+  background: #ffffff;
   margin-bottom: 60px;
 }
 
