--- a/Views/Cita/Create.cshtml
+++ b/Views/Cita/Create.cshtml
@@ -21,11 +21,19 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+
+
+            <!-- Label del ASP 
             <div class="form-group">
                 <label asp-for="IdPaciente" class="control-label">Paciente</label>
                 <select asp-for="IdPaciente" class ="form-control" asp-items="ViewBag.IdPaciente"></select>
-            </div>
+            </div> -->
 
+            <div class="form-group">
+                <label asp-for="IdPaciente" class="control-label">Paciente</label>
+                <select id="IdPaciente" asp-for="IdPaciente"  class="form-control"></select>
+            </div> 
             <!-- Button trigger modal -->
             <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#exampleModalCenter">
                 Selecionar Expediente
