Api Alternative :zap:

--- a/Views/Cita/Create.cshtml
+++ b/Views/Cita/Create.cshtml
@@ -87,7 +87,7 @@
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+        <h5 class="modal-title" id="exampleModalLongTitle">Selecionar Expediente</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -97,9 +97,11 @@
             <!--Form to select expediente --->
             <form action="#">
             <label>Expediente</label>
-                <select>
+                <select id="tipoExp" class="form-control">
+                <!--
                     <option value="UNO">20120312</option>
                     <option value="UNO">19120939</option>
+                -->
                 </select>
             </form>
 
