--- a/Views/Cita/Create.cshtml
+++ b/Views/Cita/Create.cshtml
@@ -32,10 +32,10 @@
 
             <div class="form-group">
                 <label asp-for="IdPaciente" class="control-label">Paciente</label>
-                <select id="IdPaciente" asp-for="IdPaciente"  class="form-control"></select>
+                <select id="IdPacienteCita" asp-for="IdPaciente"  class="form-control"></select>
             </div> 
             <!-- Button trigger modal -->
-            <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#exampleModalCenter">
+            <button id="expSec" type="button" class="btn btn-warning" data-toggle="modal" data-target="#exampleModalCenter">
                 Selecionar Expediente
             </button>
 
@@ -107,8 +107,10 @@
 
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button id="nuevoExp" type="button" class="btn btn-secondary" data-dismiss="modal">Generar Nuevo</button>
+        <!--
+        <button type="button"   class="btn btn-primary">Selecionar</button>
+        -->
       </div>
     </div>
   </div>
