--- a/Views/Cita/Index.cshtml
+++ b/Views/Cita/Index.cshtml
@@ -21,17 +21,19 @@
     <thead class="thead-dark">
         <tr>
             <th>
+                Paciente
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Estado)
             </th>
             <th>
-                Fecha de Inicio
+                Fecha Cita
             </th>
+            <!--
             <th>
                 Fecha de Finalización
             </th>
-            <th>
-                Paciente
-            </th>
+            --> 
             <th>
                 Operacion
             </th>
@@ -40,6 +42,9 @@
     <tbody>
         @foreach (var item in Model) {
         <tr>
+            <td class="ciente" value="@Html.DisplayFor(modelItem => item.IdPacienteNavigation.IdPaciente)">
+
+            </td>
             <td>
             @{
                 switch(item.Estado){
@@ -57,16 +62,15 @@
             <td>
                 @Html.DisplayFor(modelItem => item.FechaInicio)
             </td>
+            <!--
             <td>
                 @Html.DisplayFor(modelItem => item.FechaFinal)
             </td>
+            --> 
             <td>
-                @Html.DisplayFor(modelItem => item.IdPacienteNavigation.IdPaciente)
-            </td>
-            <td>
-                <a  class="btn btn-success" asp-action="Edit" asp-route-id="@item.IdCita">Edit</a>
-                <a  class="btn btn-warning" asp-action="Details" asp-route-id="@item.IdCita">Details</a>
-                <a  class="btn btn-danger" asp-action="Delete" asp-route-id="@item.IdCita">Delete</a>
+                <a  class="btn btn-info btn-block regular-link" asp-action="Edit" asp-route-id="@item.IdCita">Edit</a>
+                <a  class="btn btn-info btn-block regular-link btn-warning" asp-action="Details" asp-route-id="@item.IdCita">Details</a>
+                <a  class=" btn btn-info btn-block regular-link btn btn-danger" asp-action="Delete" asp-route-id="@item.IdCita">Delete</a>
             </td>
         </tr>
 }
