--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,3 +1,5 @@
+@using System.Web;
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -71,6 +73,9 @@
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2019 - Clinica - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+
+            @{string userName = HttpContext.User.Identity.Name;}
+
         </div>
     </footer>
 
