--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,19 +7,26 @@
 
 <!--
 <h1>Welcome @ViewData["username"]!</h1>
--->
 
 <div class="text-center">
     <div id="title">
-    <h1 class="display-4">Citas del Mes</h1>
+    <h1 class="display-3">Citas</h1>
     </div>
 </div>
+
+-->
 
 <div class="container">
 
 
     <div class="jaja row">
     <div class="centro-dos col-md-4">
+
+<div class="text-center">
+    <div id="title">
+    <h1 class="display-8">Citas del Dia</h1>
+    </div>
+</div>
           <table class="table table-responsive table-hover table-striped">
             <thead class="thead-light memes">
               <tr>
@@ -65,6 +72,13 @@
         -->
 
     <div class="citas col-md-8 ">
+<div class="text-center">
+    <div id="title">
+    <h1 class="display-8">Citas del Mes</h1>
+    </div>
+<div>
+
+
         <table>
               <tr>
                 <th class="day-name">Dom</th>
