--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -39,8 +39,8 @@ a.navbar-brand {
 
 /* Sticky footer styles
 -------------------------------------------------- */
-html {
-  font-size: 14px;
+* {
+  font-size: 13px !important;
   font-family: 'Fira Sans', sans-serif;
 }
 
@@ -87,4 +87,14 @@ body {
   /* Set the fixed height of the footer here */
   height: 60px;
   line-height: 60px; /* Vertically center the text there */
+}
+
+body > header > nav > div > button > i{
+  color: white !important;
+}
+
+.cerrar{
+  padding: 0;
+  float: right;
+  display: block;
 }
