--- a/wwwroot/css/calendar.css
+++ b/wwwroot/css/calendar.css
@@ -1,11 +1,12 @@
 .tempust {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    padding: 0; 
     font-size: 1rem;
-    width: 22rem;
+    width: 100%;
+    height: 400px;
     overflow: auto;
     transform: translateZ(0deg);
-
-    background-color: #eeeeee;
+    color:white;
+    background-color:#333333;
 }
 .tempust .day,
 .tempust .weekday {
@@ -40,12 +41,12 @@
 
     border-style: solid;
     border-width: 0 1rem 1rem 0;
-    border-color: transparent #bdbdbd transparent transparent;
+    border-color: transparent teal transparent transparent;
     content: '';
 }
 
 .tempust .inactive {
-    color: #bdbdbd;
+    color: white;
 }
 
 .tempust .month {
@@ -60,7 +61,7 @@
     float: left;
 
     font-size: 1rem;
-    background-color: #fafafa;
+    background-color: #e9ecef;
     border: 0;
     outline: 0;
     text-align: center;
