--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,9 +5,7 @@
 <link href="~/css/calendar.css" rel="stylesheet">
 <link href="~/css/fix.css" rel="stylesheet">
 <link href='https://fonts.googleapis.com/css?family=Ubuntu:400,500,700' rel='stylesheet' type='text/css'>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/4.2.0/core/locales-all.min.js'></script>
 
-<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 <script src="~/js/calendar.js"></script>
 
 <!--
@@ -58,11 +56,29 @@
     <div id="title">
     <h1 class="display-8">Citas del Mes</h1>
     </div>
-      <div>
 
-    <div id="tempust"></div>
-        <div id="output"><div>
+
+        <div id="tempust"></div>
+
         <script>
+        
+          var primera = []
+
+          var obj =$.getJSON("/api/CitaApi/", function (res) {
+             $.each(res,
+                  function (key, value) {
+                      primera.push ({"id": value.idPaciente, "fecha": value.fechaInicio})
+                  });
+              });
+
+            //console.log(primera);
+            //console.table(primera)
+            //$.each(primera, function(key,value){
+            //      console.log(value.id)
+            //})
+            
+            console.log(primera)            
+
             $("#tempust").tempust({
                 date: new Date("2019/10/10"),
                 offset: 1,
@@ -78,14 +94,16 @@
             });
             */
         </script>
-        
+      </div>
 
-    </div>
-</div>
+
 <script>
 
 window.onload = function() {
+
+
 $.getJSON("/api/CitaApi/", function (res) {
+
   $.each(res,
     function (key, value) {
       if (value.fechaInicio >= dateS && value.fechaInicio <= dateF) {
@@ -116,9 +134,6 @@ $.getJSON("/api/CitaApi/", function (res) {
       }
     });
 });
-
-
-
 
 
 }
