--- a/Views/consulta/Create.cshtml
+++ b/Views/consulta/Create.cshtml
@@ -25,11 +25,17 @@
                 <h5 class="h5">Detalles de la Consulta</h5>
                 <div class="form-group">
                     <label asp-for="IdDoctor" class="control-label">Doctor</label>
+                    <!--form default 
                     <select asp-for="IdDoctor" class="form-control" asp-items="ViewBag.IdDoctor"></select>
-                </div>
-                <div class="form-group">
-                    <label asp-for="IdExpediente" class="control-label">Paciente</label>
                     <select asp-for="IdExpediente" class="form-control" asp-items="ViewBag.IdExpediente"></select>
+                    <select id="expa" asp-for="IdExpediente" class="form-control" ></select>
+                    <select id="expa" asp-for="IdExpediente" class="form-control" asp-items="ViewBag.IdExpediente"></select>
+                    -->
+                     <select id="IdDocCon" asp-for="IdDoctor"  class="form-control"></select>
+                    </div>
+                <div class="form-group">
+                    <label asp-for="IdExpediente" class="control-label">Expediente/Paciente</label>
+                    <select id="expa" asp-for="IdExpediente" class="form-control" ></select>
                 </div>
                 <div class="form-group">
                     <label asp-for="Fecha" class="control-label"></label>
