--- a/Views/consulta/Index.cshtml
+++ b/Views/consulta/Index.cshtml
@@ -25,7 +25,7 @@
     <a class="btn btn-dark" asp-controller="Signos" asp-action="Create">Signos Vitales</a>
 </p>
 
-<table class="table table-bordered table-sm">
+<table class="table table-condensed">
     <thead class="thead-dark">
         <tr>
             <th>
@@ -45,7 +45,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.MontoCaja)
             </th>
-            <th></th>
+            <th  >Operacion</th>
         </tr>
     </thead>
     <tbody>
@@ -77,10 +77,10 @@
             <td>
                 @Html.DisplayFor(modelItem => item.MontoCaja)
             </td>
-            <td>
-                <a class="btn btn-success" asp-action="Edit" asp-route-id="@item.IdConsulta">Edit</a>
-                <a class="btn btn-warning" asp-action="Details" asp-route-id="@item.IdConsulta">Details</a>
-                <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.IdConsulta">Delete</a>
+            <td class="btn-group">
+                <a class="btn btn-info btn-responsive" asp-action="Edit" asp-route-id="@item.IdConsulta">Edit</a>
+                <a class="btn btn-info btn-responsive" asp-action="Details" asp-route-id="@item.IdConsulta">Detalles Consulta</a>
+                <a class="btn btn-info btn-responsive" asp-action="Delete" asp-route-id="@item.IdConsulta">Delete</a>
             </td>
         </tr>
 }
