--- a/Views/consulta/Detalles.cshtml
+++ b/Views/consulta/Detalles.cshtml
@@ -1,9 +1,7 @@
-
 <link rel="stylesheet" href="~/css/tab.css"> 
 
 
-<h1>Detalle Consulta</h1>
-<h2>Consulta: @ViewData["ident"]</h2>
+<h2>Detalle Consulta: <strong name="@ViewData["ident"]" id="idcon">@ViewData["ident"]</strong></h2>
 <hr>
 
 <div class="tab row">
@@ -13,23 +11,62 @@
   <button class="col tablinks" onclick="openCity(event, 'sig')">Signos Vitales</button>
 </div>
 
+
 <div id="lab" class="tabcontent">
-  <h3>London</h3>
-  <p>London is the capital city of England.</p>
+<h4>Agregar Nuevo Examen</h4>
+
+<!--
+<div class="row">
+    <div class="col-md-4">
+        <form action="#">
+
+            <div class="form-group">
+                <label class="control-label">Nombre:</label>
+                <input id="dire" class="form-control" />
+
+            </div>
+            <div class="form-group">
+                <input type="submit" value="1" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
+    -->
+    
+    <div class="form-group">
+        <input required placeholder="Nombre del examen" id="dire" class="form-control" />
+    </div>
+    <div class="form-group">
+      <button class="btn btn-danger" id="agregarEx">Agregar</button> 
+    </div>
+    <!---table --->
+    <table class="table">
+      <thead thead="">
+          <tr>
+            <th>Nombre del examen</th>
+          </tr>
+      </thead>
+      <tbody id="bexam" >
+      </tbody>
+    </table>
+    <div class="form-group">
+      <button class="btn btn-success" id="saveTable">Guardar</button> 
+    </div>
+</div>
+
 </div>
 
 <div id="diag" class="tabcontent">
-  <h3>Paris</h3>
+  <h3>Diagnostico</h3>
   <p>Paris is the capital of France.</p> 
 </div>
 
 <div id="rece" class="tabcontent">
-  <h3>Tokyo</h3>
+  <h3>Receta</h3>
   <p>Tokyo is the capital of Japan.</p>
 </div>
 
 <div id="sig" class="tabcontent">
-  <h3>Tokyo</h3>
+  <h3>Signos Vitales</h3>
   <p>Tokyo is the capital of Japan.</p>
 </div>
 
