--- a/wwwroot/css/tab.css
+++ b/wwwroot/css/tab.css
@@ -17,9 +17,9 @@ body {font-family: Arial;}
   border: none;
   outline: none;
   cursor: pointer;
-  padding: 14px 16px;
+  padding: 1%;
   transition: 0.3s;
-  font-size: 17px;
+  
 }
 
 /* Change background color of buttons on hover */
@@ -37,8 +37,7 @@ body {font-family: Arial;}
 /* Style the tab content */
 .tabcontent {
   display: none;
-  padding: 6px 12px;
-
+  padding-top: 3%; 
   height: 100%;
   border-top: none;
 }
